# tag_detector

./: .travis.yml  CMakeLists.txt  LICENSE  ReadMe.md  package.xml
docs/: doc_tag_detector
docs/html/: annotated.html  classes.html  classpublisher__node-members.html  classpublisher__node.html  classsubscriber__node-members.html  classsubscriber__node.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  tag__detector_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  classes_0.js  functions_3.js  searchdata.js
docs/latex/: annotated.tex  classpublisher__node.tex  classsubscriber__node.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex
include/: tag_detector.hpp
src/: main.cpp  publisher_node.cpp  subscriber_node.cpp  write_video.cpp
srv/: gaussian_size.srv
